--- a/Docs/이우철.md
+++ b/Docs/이우철.md
@@ -1,3 +1,14 @@
+# 2023.09.05
+
+## MSA 
+https://gamy-tenor-659.notion.site/MSA-85559dd2a2fd424f8ba9dd1fe2582cf5?pvs=4
+
+ - [서비스 디스커버리](https://www.notion.so/0d849ca2dbcd4658816a9dfc116132b8?pvs=21)
+ - [설정 외부화 패턴](https://www.notion.so/007cd4af6d284845bf02e9fad65d36fb?pvs=21)
+ - [회로차단기 패턴](https://www.notion.so/4549e69776a7425f918a2a3463ff0f08?pvs=21)
+ - [API Gateway](https://www.notion.so/API-Gateway-6da52fa674aa4288b1a15891a8da90da?pvs=21)
+ - [배달의 민족 MSA](https://www.notion.so/MSA-0305e2adb074424c97a5d4707221e17a?pvs=21)
+
 # 2023.09.04
 
 ## MSA 기초
