Feat: 프론트엔드 개발 환경

--- a/Docs/이제성.md
+++ b/Docs/이제성.md
@@ -1,3 +1,24 @@
+### 2023-09-12
+
+- 3주차 화요일 스크럼
+- 프론트엔드 개발 환경 구축
+- pwa 공부
+- recoil 공부
+- typescript 강의 시청
+
+### 2023-09-11
+
+- 3주차 월요일 스프린트
+- 타입스크립트 강의
+- recoil 공부
+
+### 2023-09-08
+
+- 2주차 금요일 스크럼
+- 피그마 작성
+- 컨벤션 작성
+- 2주차 회고
+
 ### 2023-09-07
 
 - 2주차 목요일 스크럼
